<resources>
    <string name="app_name">Car Wash EL Amigo</string>
    <!-- main -->
    <string name="btnCobro">Escanear placa</string>
    <string name="btnHistorial">Historial</string>

    <!-- iniciar sesion -->
    <string name="lblIniciar">INICIAR SESIÓN</string>
    <string name="lblUsuario">USUARIO:</string>
    <string name="lblInfoUsuario">Ingrese su usuario</string>
    <string name="lblClave">CONTRASEÑA:</string>
    <string name="lblInfoClave">Ingrese su contraseña</string>
    <string name="btnIngresar">INGRESAR</string>

    <!-- historial -->
    <string name="btnFiltrar">Filtrar</string>
    <string name="txtFecha">Ingresar fecha</string>
    <string name="btnExit">Inicio</string>

    <!-- factura -->
    <string name="txtPrecio">PRECIO $:</string>
    <string name="txtDescuento">Descuento %:</string>
    <string name="txtTotal">txtTotal</string>
    <string name="etxtPrecio">Ingrese el precio</string>
    <string name="etxtDecueno">Ingrese descuento</string>
    <string name="etxtTotal">Total a pagar: $0.00</string>
    <string name="btnCalcular">Calcular Pago</string>
    <string name="btnGuardar">Guardar</string>
    <string name="btnImprimir">Imprimir</string>
</resources>