<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/backgroundColor"
    tools:context=".Factura">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/fondo_etxt"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtInfoPlaca"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Placa info"
                    android:textColor="@color/BarraName"
                    android:textSize="20dp" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/txtPrecio"
                android:textColor="@color/BarraName"
                android:textSize="20dp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/fondo_etxt"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/etxtPrecio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:textSize="20dp"
                    android:ems="10"
                    android:hint="@string/etxtPrecio"
                    android:inputType="numberDecimal" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/txtDescuento"
                android:textColor="@color/BarraName"
                android:textSize="20dp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/fondo_etxt"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/etxtDescuento"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:textSize="20dp"
                    android:ems="10"
                    android:hint="@string/etxtDecueno"
                    android:inputType="number" />
            </LinearLayout>

            <TextView
                android:id="@+id/txtTotal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/etxtTotal"
                android:textColor="@color/BarraName"
                android:textSize="20dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnCalcular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:padding="12dp"
                android:text="@string/btnCalcular"
                android:textSize="20dp"
                android:background="@drawable/styles_btn"
                app:backgroundTint="@color/c_segundario" />

            <Button
                android:id="@+id/btnGuardar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:padding="12dp"
                android:text="@string/btnGuardar"
                android:textSize="20dp"
                android:background="@drawable/styles_btn"
                app:backgroundTint="@color/c_segundario" />

            <Button
                android:id="@+id/btnImprimir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="30dp"
                android:padding="12dp"
                android:text="@string/btnImprimir"
                android:textSize="20dp"
                android:background="@drawable/styles_btn"
                app:backgroundTint="@color/c_segundario"/>
        </LinearLayout>

    </ScrollView>

</LinearLayout>